add refract dependencies

--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "callbag-basics": "^3.1.0",
+    "callbag-from-promise": "^1.3.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.0.1",
+    "react-zap": "^2.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "refract-callbag": "^4.2.3",
+    "refract-redux-callbag": "^1.4.1",
     "styled-components": "4.4.0",
     "styled-system": "5.1.2"
   },
